@@ -3,6 +3,7 @@ Revision history for firebird_fdw
 1.2.0	2020-??-??
 	- Add table/column option "quote_identifier"
 	- Add server option "quote_identifiers"
+	- Have IMPORT FOREIGN SCHEMA add "quote_identifier" where appropriate
 	- Add function firebird_fdw_server_options()
 	- Apply CREATE SERVER's "port" option, if provided
 	- Add support for generated columns (PostgreSQL 12 and later)
